2006-10-06  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/convmatrix.c: commit patch from GG that
	cleans up code and adds (commented out) support for larger
	matrices, with some coding style fixes; see bug #357085.
	This plug-in still needs help, though.

2006-10-06  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-open-location-dialog.c
	(file_open_location_response): slightly better error handling;
	doesn't address bug #358203 yet.

	* app/file/file-utils.c (file_check_single_magic)
	(file_check_magic_list): code cleanup.

2006-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/Dialogs.c: changed some labels to be
	more descriptive instead of explaining the meaning in a tooltip.
	Set slider senitivity according to fractal type.
	
2006-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/Dialogs.c: don't show fractional values
	for the ITER parameter; it is being used as an integer. Also make
	sure that it never becomes zero as that used to crash the plug-in.

2006-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/Dialogs.c: save files using
	g_ascii_formatd() (fixes bug #360095).

2006-10-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icodialog.[ch]
	* plug-ins/winicon/icoload.[ch]
	* plug-ins/winicon/icosave.[ch]
	* plug-ins/winicon/main.[ch]: applied patch from Aurimas Juška
	with code cleanup and fixes for bug #346016 and other issues
	(see bug #352899).

2006-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/*.scm: applied patch from Saul Goode
	with review and localisation of Script-Fu procedure blurbs
	(bug #351283).

2006-10-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfig/gfig-dialog.c: reverted change for bug #356901.

	* plug-ins/script-fu/scripts/test-sphere.scm: removed superfluous
	comment.

2006-10-04  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpui.defs
	* plug-ins/pygimp/gimpui.override: new style constructors for